tests/macros/plugin/filter_async.stderr
error: option `filter_async` does not exist for kind `plugin`
 --> $DIR/filter_async.rs:2:52
  |
2 |     let q = inquisition::questions![plugin { async filter: todo!() }];
  |                                                    ^^^^^^
