tests/macros/plugin/filter_async.rs
fn main() {
    let q = inquisition::questions![plugin { async filter: todo!() }];
}
